learn more about testing

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     ext {
+        coreTestingVersion = '1.0.0'
         gsonVersion = '2.8.5'
         kotlin_version = '1.3.41'
+        testExtJunit = '1.1.0'
         workVersion = '2.2.0'
     }
     repositories {
