--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         coreTestingVersion = '1.0.0'
         gsonVersion = '2.8.5'
         kotlin_version = '1.3.41'
+        navigationVersion = '1.0.0'
         testExtJunit = '1.1.0'
         workVersion = '2.2.0'
     }
