--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.google.code.gson:gson:$gsonVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
 
     // Testing dependencies
